--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
 
     
     <script src="./app.js"></script>
-    <script src="./validar.js"></script>
+    <script src="./convert.js"></script>
 </body>
 </html>
