add clase 17 funciones

--- a/javascript-03-funciones/index.html
+++ b/javascript-03-funciones/index.html
@@ -12,6 +12,9 @@
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13127.068722795977!2d-58.497270750000006!3d-34.66058225!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcc90bc6508cef%3A0xa83e7acf05b2fa3a!2sBudding%20Gym!5e0!3m2!1ses!2sar!4v1682378813800!5m2!1ses!2sar" width="200" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
 
+    <script src="callbacks.js"></script>
+    <script src="arrows.js"></script>
+    <script src="closures.js"></script>
     <script src="funciones.js"></script>
     <script src="app.js"></script>
 </body>
